<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/top_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:src="@drawable/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="@+id/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_background"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_12"
        android:text="@string/cr7"
        android:textSize="@dimen/text_size_18dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/liner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cr7gmail"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liner"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margint_start_45"
            android:layout_marginEnd="@dimen/margin_end_45"
            android:background="@drawable/stylebutton1"
            android:backgroundTint="@color/greys"
            android:clickable="false"
            android:drawableStart="@drawable/ic_1"
            android:drawablePadding="@dimen/draw_padding"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padd_start_15"
            android:layout_marginTop="@dimen/margin_top_15"
            android:text="@string/mr"
            android:textSize="@dimen/text_size_16dp"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margint_start_45"
            android:layout_marginEnd="@dimen/margin_end_45"
            android:background="@drawable/stylebutton1"
            android:backgroundTint="@color/greys"
            android:clickable="false"
            android:drawableStart="@drawable/ic_2"
            android:drawablePadding="@dimen/draw_padding"
            android:layout_marginTop="@dimen/margin_top_15"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padd_start_15"
            android:text="@string/as"
            android:textSize="@dimen/text_size_16dp"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margint_start_45"
            android:layout_marginEnd="@dimen/margin_end"
            android:background="@drawable/stylebutton1"
            android:backgroundTint="@color/greys"
            android:clickable="false"
            android:drawableStart="@drawable/ic_3"
            android:drawablePadding="@dimen/draw_padding"
            android:layout_marginTop="@dimen/margin_top_15"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padd_start_15"
            android:text="@string/pi"
            android:textSize="@dimen/text_size_16dp"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margint_start_45"
            android:layout_marginEnd="@dimen/margin_end"
            android:background="@drawable/stylebutton1"
            android:backgroundTint="@color/greys"
            android:clickable="false"
            android:drawableStart="@drawable/ic_4"
            android:drawablePadding="@dimen/draw_padding"
            android:layout_marginTop="@dimen/margin_top_15"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padd_start_15"
            android:text="@string/nt"
            android:textSize="@dimen/text_size_16dp"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margint_start_45"
            android:layout_marginEnd="@dimen/margin_end"
            android:background="@drawable/stylebutton1"
            android:backgroundTint="@color/greys"
            android:clickable="false"
            android:drawableStart="@drawable/ic_5"
            android:drawablePadding="@dimen/draw_padding"
            android:layout_marginTop="@dimen/margin_top_15"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padd_start_15"
            android:text="@string/fs"
            android:textSize="@dimen/text_size_16dp"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/height_52"
            android:layout_marginTop="@dimen/margin_top_18"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_18dp"
            android:textColor="@color/white_ffffff"
            android:layout_marginStart="@dimen/margint_start_45"
            android:layout_marginEnd="@dimen/margin_end"
            android:backgroundTint="@color/blue_button"
            android:background="@drawable/stylebutton2"
            android:text="@string/btmp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>